Add window.onload for students since this is usually a challenge for them.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 	<head>
 		<script src="js/mail-generator.js"></script>
 		<link href="css/style.css" rel="stylesheet" media="screen">
+    <script>
+      window.onload = function(){
+        // ALL OF YOUR JAVASCRIPT CODE SHOULD GO HERE. 
+        // We have to use window.onload so your JavaScript doesn't execute until the page has loaded and all HTML has been downloaded to your browser
+
+
+      };
+    </script>
 	</head>
 	<body>
 		<div class="container" id="main">
